--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-    <section class="todo-container">
+    <!-- <section class="todo-container">
       <div class="newtask-box">
         <label for="newTask">Додайте нову задачу</label>
         <input type="text" id="newTask" placeholder="введіть задачу і натисніть ентер">
@@ -19,11 +19,23 @@
         <legend>Список задач</legend>
         <ul class="todo-list"></ul>
       </fieldset>
-    </section>
+    </section> -->
+    <label>
+      find object
+    <input type="number" name="number" id="id-input">
+    </label>
+    <label>
+        add object
+      <input type="number" name="number" id="id-input-add">
+    </label>
+    <ul class="list__add">
+  
+    </ul>
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-  <script src="./js/service.js"></script>
-  <script src="./js/index.js"></script>
+  <!-- <script src="./js/service.js"></script>
+  <script src="./js/index.js"></script> -->
+  <script src="./js/fethc.js"></script>
 </body>
 </html>
